# legalizacion-tc

./: .env.example  .gitignore  AGENTS.md  Plantilla Legalizacion TC Demo.xlsx  README.md  pyproject.toml  requirements.txt  run_e2e.bat
docs/: MODULOS.md  PROMPT-FACTURAS.md
scripts/: clean_cache.py  dump_xlsx_json.py  e2e_common.py  extract_invoices_template.py  init_invoice_cache.py  inspect_samples.py  prepare_demo_plantilla.py  run_e2e_2400.py  run_full_e2e.py
src/legalizacion_tc/: __init__.py  __main__.py  bank_statement_parser.py  cache_cleanup.py  config.py  date_normalizer.py  drive_manager.py  excel_report_builder.py  extract_loader.py  extract_parser.py  extract_selection.py  extract_updater.py  folder_resolver.py  fx_converter.py  google_auth.py  historico_sync.py  invoice_loader.py  invoice_validation.py  (+13 more)
tests/: build_fixtures.py  conftest.py  test_bank_statement_parser.py  test_cache_cleanup.py  test_config.py  test_data.py  test_date_normalizer.py  test_drive_manager.py  test_excel_report_builder.py  test_extract_invoices_template.py  test_extract_parser.py  test_extract_selection.py  test_find_base_legalization.py  test_folder_resolver.py  test_fx_converter.py  test_invoice_loader.py  test_invoice_validation.py  test_legalization_batch.py  test_legalization_dedup.py  test_legalization_filename.py  test_metadata_mapper.py  test_nit_utils.py  test_pipeline_report.py  test_reconciliation_engine.py  test_run_pipeline_batch.py  test_run_pipeline_drive_upload.py  test_run_pipeline_pdf_source.py  test_validation_notes.py  test_validation_notes_failure.py
(+1 files in other folders)
